Update `ExprValueUtils` and unit tests.
Signed-off-by: currantw <taylor.curran@improving.com>